# vehicle_scraping

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  scrapy.cfg
vehicle_scraping/: items.py  middlewares.py  pipelines.py  settings.py
vehicle_scraping/spiders/: autoevolution_vehicle_spider.py  motorcycle_vehicle_spider.py  vehicle_spider.py
