[tool.poetry]
name = "vehicle_scraping"
version = "0.1.0"
description = "Scraping to obtain vehicle details"
authors = ["Lukas Alberto Belck <lukas.belck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lukasab/vehicle_scraping"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"
black = "^21.8b0"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
